# ifcb-feature-extractor

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
scripts/: get-test-data.sh  test.sh
