[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ifcb-feature-extractor"
version = "0.1.1"
description = "IFCB feature extraction tool"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Joe Futrelle", email = "jfutrelle@whoi.edu" },
    { name = "Alex Baldwin", email = "alewin@noc.ac.uk" }
]
keywords = ["image processing", "feature extraction", "computer vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "phasepack",
    "pyfftw",
    "scikit-learn",
    "libifcb==0.2",
    "click==8.1.8",
    "typer"
]

[project.urls]
Homepage = "https://github.com/NOC-OI/ifcb-feature-extractor"
Repository = "https://github.com/NOC-OI/ifcb-feature-extractor.git"
Issues = "https://github.com/NOC-OI/ifcb-feature-extractor/issues"

[tool.hatch.build.targets.wheel]
packages = ["ifcb_feature_extractor"]

[tool.hatch.build.targets.sdist]
include = [
    "/ifcb_feature_extractor",
]

[tool.hatch.metadata]
allow-direct-references = true
